# CPPCraft

./: .gitignore  CMakeLists.txt  README.md
res/shaders/static/: fragment.glsl  vertex.glsl
src/: Main.cpp
src/camera/: Camera.h
src/mesh/: Mesh.cpp  Mesh.h
src/object/: GameObject.cpp  GameObject.h
src/shader/: Shader.cpp  Shader.h
src/utils/: IOUtils.h  MathUtil.h
src/world/: World.cpp  World.h
